--- a/config/css/style.css
+++ b/config/css/style.css
@@ -1,9 +1,14 @@
 .title {
-	padding: 10px;
+	padding-top: 15px;
+	padding-bottom: 0px;
 	text-transform: uppercase;
 	font-family: 'PT Sans', sans-serif;
 	font-size: 1.2em;
 	font-weight: 500;
 	color: #888888;
+	text-align: center;
+}
+
+#foot {
 	text-align: center;
 }
